# torque

./: .gitignore  AGENTS.md  Cargo.toml  STATUS.md
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: context_mgr.rs  error.rs  lib.rs  prompt.rs  runtime.rs
crates/agent-runtime/src/tools/: context_tools.rs  mod.rs  vfs_tools.rs
crates/checkpointer/: Cargo.toml
crates/checkpointer/migrations/: 001_create_checkpoints.sql
crates/checkpointer/src/: error.rs  hybrid.rs  lib.rs  trait.rs  trait_def.rs
crates/context-store/: Cargo.toml
crates/context-store/migrations/: 002_create_vfs_metadata.sql
crates/context-store/src/: error.rs  lib.rs  redis_impl.rs  s3_impl.rs  store.rs  vfs.rs
crates/context-store/tests/: routing.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_create_tenants.sql  002_create_agent_types.sql  003_create_runs.sql  004_add_async_fields_to_runs.down.sql  004_add_async_fields_to_runs.up.sql  004_create_nodes.sql  005_create_edges.sql  006_create_artifacts.sql  007_create_queue.sql  008_add_tool_governance.down.sql  008_add_tool_governance.up.sql
crates/db/src/: artifacts.rs  edges.rs  lib.rs  migrations.rs  nodes.rs  queue.rs  runs.rs  tenants.rs
crates/executor/: Cargo.toml
crates/executor/src/: crash_recovery.rs  error.rs  lib.rs  scheduler.rs  worker.rs
crates/session-agent/: .env.example  Cargo.toml  README.md
crates/session-agent/migrations/: 001_initial_schema.sql  002_project_memory.sql  003_memory_candidates_and_entries.sql
crates/session-agent/src/: agent.rs  api.rs  lib.rs  main.rs
crates/session-agent/src/agent/: context.rs  runner.rs  stream.rs
crates/session-agent/src/api/: memory.rs  messages.rs  middleware.rs  mod.rs  sessions.rs
crates/session-agent/src/db/: memory_candidates.rs  memory_entries.rs  messages.rs  mod.rs  schema.sql  sessions.rs
crates/session-agent/src/models/: memory.rs  mod.rs  session.rs
crates/session-agent/tests/: agent_runner_tests.rs  api_tests.rs  chat_streaming_api.rs  context_window_tests.rs  memory_candidate_api_tests.rs  memory_recall_tests.rs  project_scope_tests.rs  session_http_api.rs  stream_event_tests.rs  tool_registry_tests.rs
crates/tool-executor/: Cargo.toml
crates/tool-executor/src/: error.rs  execute.rs  lib.rs  permission.rs  registry.rs
crates/torque-extension/: Cargo.toml
crates/torque-extension/src/: actor.rs  config.rs  context.rs  error.rs  id.rs  lib.rs  lifecycle.rs  message.rs
crates/torque-harness/: .env.example  Cargo.toml  README.md
crates/torque-harness-lite/: Cargo.toml
crates/torque-harness-lite/src/: main.rs
crates/torque-harness/migrations/: 003_memory_candidates_and_entries.sql  20260416000001_create_v1_agent_definitions.up.sql  20260416000002_create_v1_agent_instances.down.sql  20260416000002_create_v1_agent_instances.up.sql  20260416000003_create_v1_events.up.sql  20260416000004_create_checkpoints.up.sql  20260416000005_add_session_kernel_columns.up.sql  20260416000006_create_v1_tasks.down.sql  20260416000007_create_v1_artifacts.up.sql  20260416000008_create_v1_capabilities.down.sql  20260416000008_create_v1_capabilities.up.sql  20260416000010_create_v1_delegations_approvals.up.sql  20260416000011_create_v1_checkpoints.up.sql  20260419000001_create_v1_memory_tables.up.sql  20260419000002_create_ephemeral_logs.down.sql  20260419000002_create_ephemeral_logs.up.sql  20260419000003_create_rules.down.sql  20260419000003_create_rules.up.sql  20260421000001_create_v1_team_tasks.down.sql  20260421000001_create_v1_team_tasks.up.sql  20260421000002_create_v1_team_shared_state.down.sql  20260421000002_create_v1_team_shared_state.up.sql  20260421000003_create_v1_team_events.down.sql  20260421000003_create_v1_team_events.up.sql  20260421000004_add_team_task_fields.down.sql  20260421000004_add_team_task_fields.up.sql  20260421000005_add_delegation_result_columns.down.sql  20260421000005_add_delegation_result_columns.up.sql  20260422000001_add_notification_tables.down.sql  20260422000001_add_notification_tables.up.sql  20260423000001_add_context_anchors_to_v1_checkpoints.down.sql  20260423000001_add_context_anchors_to_v1_checkpoints.up.sql  20260424000001_add_superseded_by_to_v1_memory_entries.down.sql  20260424000001_add_superseded_by_to_v1_memory_entries.up.sql  20260424000002_add_retry_count_to_v1_team_tasks.down.sql  20260424000002_add_retry_count_to_v1_team_tasks.up.sql  20260425000001_create_v1_escalations.down.sql  20260425000001_create_v1_escalations.up.sql  20260428000001_create_runs.up.sql  20260501000001_create_extension_snapshots.down.sql  (+3 more)
crates/torque-harness/src/: app.rs  embedding.rs  lib.rs  main.rs  v1_guards.rs  vector_type.rs
crates/torque-harness/tests/: agent_runner_tests.rs  api_tests.rs  async_delegation_flow_tests.rs  async_runner_tests.rs  capability_resolution_tests.rs  chat_streaming_api.rs  checkpoint_message_tests.rs  checkpoint_recovery_tests.rs  compaction_tests.rs  context_compaction_tests.rs  context_window_tests.rs  decision_log_tests.rs  dedup_thresholds_tests.rs  delegation_packet_tests.rs  delegation_repo_tests.rs  delegation_status_tests.rs  dynamic_tool_integration_tests.rs  dynamic_tool_registration_tests.rs  escalation_service_tests.rs  event_listener_tests.rs  file_approval_flow_tests.rs  filesystem_permissions_tests.rs  jobs_memory_compaction_tests.rs  member_agent_tests.rs  memory_candidate_api_tests.rs  memory_recall_tests.rs  memory_sse_tests.rs  merge_strategy_tests.rs  notification_hooks_tests.rs  notification_service_tests.rs  policy_evaluator_integration_tests.rs  policy_evaluator_tests.rs  project_scope_tests.rs  runtime_adapter_tests.rs  runtime_host_path_tests.rs  runtime_module_exports_tests.rs  session_http_api.rs  stream_event_tests.rs  team_recovery_tests.rs  team_shared_state_tests.rs  (+13 more)
crates/torque-runtime/: Cargo.toml
crates/torque-runtime/src/: checkpoint.rs  context.rs  environment.rs  events.rs  host.rs  lib.rs  message.rs  message_queue.rs  offload.rs  tools.rs  vfs.rs
crates/torque-runtime/tests/: environment_contracts.rs  host_port_integration.rs  vfs_contracts.rs
(+500 files in other folders)
