[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/dag",
    "crates/db",
    "crates/llm",
    "crates/queue",
    "crates/context-store",
    "crates/tool-executor",
    "crates/agent-runtime",
    "crates/executor",
    "crates/checkpointer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
