[workspace]
resolver = "2"
members = [
    "crates/llm",
    "crates/torque-kernel",
    "crates/torque-runtime",
    "crates/torque-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tower = "0.5"
tower-http = "0.5"
axum = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
