[package]
name = "agent-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
db = { path = "../db" }
llm = { path = "../llm" }
context-store = { path = "../context-store" }
tool-executor = { path = "../tool-executor" }
checkpointer = { path = "../checkpointer" }
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }