[package]
name = "checkpointer"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
