[package]
name = "context-store"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }