[package]
name = "session-agent"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Internal dependencies
llm = { path = "../llm" }

[dev-dependencies]
tokio-test = "0.4"
