[package]
name = "session-agent"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
subtle = "2"

# Internal dependencies
llm = { path = "../llm" }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
