[package]
name = "torque-harness-lite"
version.workspace = true
edition.workspace = true

[dependencies]
torque-kernel = { path = "../torque-kernel" }
torque-runtime = { path = "../torque-runtime" }
llm = { path = "../llm" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
