[package]
name = "torque-harness"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
async-stream = "0.3"
futures = { workspace = true }
tokio-stream = { workspace = true }

# Internal dependencies
llm = { path = "../llm" }
torque-kernel = { path = "../torque-kernel" }
torque-runtime = { path = "../torque-runtime" }
checkpointer = { path = "../checkpointer" }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
mockall = "0.13"
