[package]
name = "torque-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
llm = { path = "../llm" }
checkpointer = { path = "../checkpointer" }
torque-kernel = { path = "../torque-kernel" }
